<resources>
    <string name="app_name">Thermo-Bobo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thermo-Bobo</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_temp">Temperature</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_settings">Settings</string>

    <string name="temp_sign">°C</string>
    <string name="high_temp">High Temperature</string>
    <string name="low_temp">Low Temperature</string>
</resources>