<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_temp">

    <fragment
        android:id="@+id/nav_temp"
        android:name="com.example.smarcifier.ui.temp.TempFragment"
        android:label="@string/menu_temp"
        tools:layout="@layout/fragment_temp" />

    <fragment
        android:id="@+id/nav_alarm"
        android:name="com.example.smarcifier.ui.alarm.AlarmFragment"
        android:label="@string/menu_alarm"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.smarcifier.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>